Raw implementation of string functions.
* length of some 'string' function
* lettter x of some 'string' function
* Lint warning fixes.
* String highlighting after user selection.
* Empty String as parameter possible.
* Compute Dialog Refactoring.
* Display of Character returning functions in ComputeDialog.